Fix full boot