@@ -2,11 +2,15 @@ import java.io.BufferedReader;
 import java.io.FileInputStream;
 import java.io.InputStream;
 import java.io.InputStreamReader;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.HashMap;
 import java.util.Map;
-
+import java.io.IOException;
 import org.yaml.snakeyaml.Yaml;
 
+import net.sourceforge.argparse4j.impl.Arguments;
 import net.sourceforge.argparse4j.ArgumentParsers;
 import net.sourceforge.argparse4j.inf.ArgumentParser;
 import net.sourceforge.argparse4j.inf.ArgumentParserException;
@@ -55,12 +59,22 @@ public class Boot {
         try {
             ProcessBuilder processBuilder = new ProcessBuilder("bash", "-c", bash);
             Map<String, String> processEnvironment = processBuilder.environment();
-            environment.forEach(processEnvironment::put);
+            if (environment != null) environment.forEach(processEnvironment::put);
             processBuilder.inheritIO();
-            processBuilder.start();
+            processBuilder.start().waitFor();
         } catch (Exception e) {
             e.printStackTrace();
         }
+    }
+
+    static String getNextI(String logFull) {
+        for (int i = 1; i < Integer.MAX_VALUE; i++) {
+            String check = logFull+Integer.toString(i)+".log";
+            if (Files.notExists(Paths.get(check))) {
+                return Integer.toString(i);
+            }
+        }
+        throw new RuntimeException("Could not determine i");
     }
 
     public static void main(String[] args) {
@@ -73,9 +87,10 @@ public class Boot {
         parser.addArgument("--workload")
                 .required(true)
                 .help("Workload to run");
-        parser.addArgument("--i")
-                .required(true)
-                .help("What number should be assigned to log outputs?");
+        parser.addArgument("--debug")
+                .setDefault(false)
+                .action(Arguments.storeTrue())
+                .help("Don't send stderr/stdout to file on invoke");
 
         Namespace ns = null;
         try {
@@ -90,12 +105,19 @@ public class Boot {
         String name = config.get("name");
         String wrapper = config.getOrDefault("wrapper", "");
         String cassandra_java = config.get("cassandra_jdk_path") + "/bin/java";
+        String cassandra_gc_short_name = config.get("cassandra_gc_short_name");
         String cassandra_gc_options = config.get("cassandra_gc_options");
+        String cassandra_gc_log_level = config.get("cassandra_gc_log_level");
+        String cassandra_gc_heap = config.get("cassandra_gc_heap");
         String cassandra_vm_options = config.get("cassandra_vm_options");
         String jvm_mitigation = config.get("jvm_mitigation");
 
-        String ycsb_java = config.get("cassandra_jdk_path") + "/bin/java";
+        String ycsb_java = config.get("cassandra_jdk_path");
+        String ycsb_gc_short_name = config.get("ycsb_gc_short_name");
         String ycsb_gc_options = config.get("ycsb_gc_options");
+        String ycsb_gc_log_level = config.get("ycsb_gc_log_level");
+        String ycsb_gc_heap = config.get("ycsb_gc_heap");
+        String ycsb_vm_options = config.get("ycsb_vm_options");
 
         Map<String, String> workload = getMap(ns.getString("workload"), "workload");
         String ycsb_workload_path = workload.get("ycsb_workload_path");
@@ -106,42 +128,78 @@ public class Boot {
         String ycsb_cassandra_username = workload.get("ycsb_cassandra_username");
         String ycsb_cassandra_password = workload.get("ycsb_cassandra_password");
 
-        // 1. Generate command to invoke
-        String yachtInvoke = String.join(" ", wrapper, cassandra_java,
-                cassandra_gc_options, cassandra_vm_options, jvm_mitigation, classpath, "Yacht");
-
-        // ./bundles/ycsb-0.17.0/bin/ycsb.sh run cassandra-cql " + System.getenv("YCSB_ARGS")
         String YCSB_BASE_INVOKE = String.join(" ", wrapper, "./bundles/ycsb-0.17.0/bin/ycsb.sh");
         String YCSB_ARGS = String.join(" ", "-s", "-P", String.join("", ycsb_workload_path, ycsb_workload), "-threads", ycsb_threads, "-p", String.join("", "cassandra.username=", ycsb_cassandra_username), "-p", String.join("", "cassandra.password=", ycsb_cassandra_password), "-p", String.join("", "hosts=", ycsb_hosts));
+
         // ycsb_target is optional
+        String logStrTarget = "";
         if (ycsb_target != null) {
-            YCSB_ARGS = String.join(" ", YCSB_ARGS, "-target", ycsb_target, "-p", "measurement.interval=both");
+            logStrTarget = "_target"+ycsb_target;
+        }
+
+        // Calculate log location
+        final String logPath = "log/"+name+"/"+type+"/"+ycsb_workload+"";
+        final String logSubPrefix = "server"+cassandra_gc_short_name+"_"+cassandra_gc_heap+"_client"+ycsb_gc_short_name+"_"+ycsb_gc_heap+logStrTarget+".";
+        final String logPrefix = logSubPrefix + getNextI(logPath + "/" + logSubPrefix);
+        final String logFull = logPath + "/" + logPrefix;
+        try {
+            Files.createDirectories(Paths.get(logPath));
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
+
+        String cassandra_gc_log_str = cassandra_gc_log_level != null ? "-Xlog:"+cassandra_gc_log_level+":file=" + logFull + ".server.gc::filesize=0" : "";
+        String ycsb_gc_log_str = ycsb_gc_log_level != null ? "-Xlog:"+ycsb_gc_log_level+":file=" + logFull + ".client.gc::filesize=0" : "";
+
+        YCSB_ARGS = String.join(" ", YCSB_ARGS, "-p", "hdrhistogram.output.path="+logFull+".hdr");
+        String YCSB_JAVA_OPTS = String.join(" ", ycsb_gc_options, "-Xms"+ycsb_gc_heap, "-Xmx"+ycsb_gc_heap, ycsb_gc_log_str, ycsb_vm_options);
+
+        if (ycsb_target != null) {
+            YCSB_ARGS = String.join(" ", YCSB_ARGS, "-p", "measurement.interval=both", "-target", ycsb_target);
         } else {
             YCSB_ARGS = String.join(" ", YCSB_ARGS, "-p", "measurement.interval=op");
         }
-        // Should also add HDR_FILE info HDR_FILE="-p hdrhistogram.output.path=$LOG/${gc}_${heap}_target${TARGET_LEVEL}.${i}.hdr"
-        String YCSB_HDR_FILE =  "";
 
-        // 2. Generate environment variables to be set
+        Map<String, String> environment = new HashMap<>(Map.ofEntries(
+            entry("YCSB_BASE_INVOKE", YCSB_BASE_INVOKE),
+            entry("YCSB_JAVA_HOME", ycsb_java),
+            entry("YCSB_JAVA_OPTS", YCSB_JAVA_OPTS),
+            entry("YCSB_ARGS", "-p operationcount=10000 " + YCSB_ARGS)
+        ));
 
-        Map<String, String> environment = Map.ofEntries(
-                entry("YCSB_BASE_INVOKE", YCSB_BASE_INVOKE),
-                entry("YCSB_ARGS", YCSB_ARGS+" -p operationcount=10000"),
-                entry("YCSB_HDR_FILE", YCSB_HDR_FILE)
-        );
+        String yachtInvoke = String.join(" ", wrapper, cassandra_java,
+            cassandra_gc_options, cassandra_gc_log_str, cassandra_vm_options,
+            jvm_mitigation, classpath, "Yacht", type == Type.MULTI ? "--multi" : "");
 
-        // Calculate log location
-        /*
-        LOG_PREFIX="server${gcServer}_${heapServer}_client${gcClient}_${heapClient}_target${TARGET_LEVEL}.${i}"
-        CASSANDRA_GC_LOG="-Xlog:gc:file=${LOG}/${LOG_PREFIX}.server.gc::filesize=0"
-        YCSB_GC_LOG="-Xlog:gc:file=${LOG}/${LOG_PREFIX}.client.gc::filesize=0"
-        CASSANDRA_JVM_OPTS="-XX:+Use${gcServer}GC -Xms${heapServer} -Xmx${heapServer} ${CASSANDRA_GC_LOG}"
-            YCSB_JVM_OPTS="-XX:+Use${gcClient}GC -Xms${heapClient} -Xmx${heapClient} ${YCSB_GC_LOG}"
-            TARGET="-target ${TARGET_LEVEL}" HDR_FILE="-p hdrhistogram.output.path=${LOG}/${LOG_PREFIX}.hdr"
-        ./run.sh --multi &> ${LOG}/${LOG_PREFIX}.log
-         */
-        // 3. Invoke process and exit boot
-        System.out.println(yachtInvoke);
+        invoke("rm -rf ./db", null);
+        String dbName = "db_"+ycsb_workload;
+
+        // Before invoke a real run we should either
+        // copy pre_inited db or init on first use
+        final boolean needs_init = !Files.isDirectory(Paths.get("./" + dbName));
+        if (needs_init) {
+            System.out.println("Looks like this is the first time you run this workload");
+            String prev_ycsb_args = environment.get("YCSB_ARGS");
+            String ycsb_args_no_target = prev_ycsb_args.substring(0, prev_ycsb_args.indexOf("-target"));
+            System.out.println(dbName + " does not exists, creating can take a while...");
+            environment.put("YCSB_ARGS", ycsb_args_no_target);
+            invoke("mkdir -p db", null);
+            System.out.println("Creating the prepopulated db...");
+            String redirect = ns.getBoolean("debug") ? "" : "&> /dev/null";
+            invoke(yachtInvoke + " --init " + redirect, environment);
+            environment.put("YCSB_ARGS", prev_ycsb_args);
+
+            System.out.println("Caching db for future runs");
+            invoke("cp -r ./db ./" + dbName, null);
+        } else {
+            System.out.println("Using cached database");
+            invoke("cp -r ./" + dbName + " ./db", null);
+        }
+
+        System.out.println("Invoking benchmark");
+        if (!ns.getBoolean("debug")) {
+            yachtInvoke = yachtInvoke +  "&> " + logFull+".log";
+        }
         invoke(yachtInvoke, environment);
     }
 }
